<resources>
    <string name="app_name">VoiceAssistant</string>
    <string name="welcome">Welcome to VoiceAssistant!</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="other_login">or sign in with one of this methods</string>
    <string name="other_login_google">Google account</string>
    <string name="other_login_phone">phone number</string>
    <string name="other_login_guest">as a guest</string>
    <string name="create_account">Create account</string>
    <string name="verify_email">Email has been sent to you</string>
    <string name="failed_verify_email">Email hasn\'t been sent to you</string>
    <string name="back">Back</string>
    <string name="enter_phone">Enter your phone number:</string>
    <string name="send_code">Send code</string>
    <string name="enter_code">Enter the verification code:</string>
    <string name="verify_code">Verify code</string>
    <string name="field_hint">Ask a question</string>
    <string name="btn_name">Send</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="btn_reg">Sign up</string>
    <string name="btn_login">Sign in</string>
    <string name="assistant">Assistant</string>
    <string name="user">User</string>
    <string name="day_theme">Day theme</string>
    <string name="night_theme">Night theme</string>
    <string name="clear">Clear</string>
    <string name="sign_out">Sign out</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="registration_failed">Registration failed!</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_failed">Login failed!</string>
    <string name="enter_email_and_password">Enter e-mail and password!</string>
    <string name="enter_phone_to_verify">Enter correct phone number!</string>
    <string name="enter_code_to_verify">Enter verification code!</string>
    <string name="api_exception">Api exception!</string>
    <string name="verification_failed">Verification failed!</string>
    <string name="code_sent">Code was sent to your phone</string>
    <string name="db_error">Database error!</string>
</resources>