<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    tools:context=".loginActivity.EmailLoginActivity">

    <LinearLayout
        android:id="@+id/createLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/createText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8sp"
            android:text="@string/welcome"
            android:textColor="@color/user_text"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="8dp"
            android:drawableTint="@color/secondary"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/user_text" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_baseline_https_24"
            android:drawablePadding="8dp"
            android:drawableTint="@color/secondary"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/user_text" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/btn_login" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/createLayout"
        app:layout_constraintStart_toStartOf="@+id/createLayout"
        app:layout_constraintTop_toBottomOf="@+id/createLayout">

        <TextView
            android:id="@+id/noAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/no_account"
            android:textColor="@color/user_text" />

        <Button
            android:id="@+id/regButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:minWidth="60dip"
            android:minHeight="30dip"
            android:padding="0dp"
            android:paddingStart="5dp"
            android:text="@string/btn_reg"
            android:textColor="@color/primary_light"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/other"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/registration"
        app:layout_constraintStart_toStartOf="@id/registration"
        app:layout_constraintTop_toBottomOf="@id/registration">

        <TextView
            android:id="@+id/otherMethodsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_login" />

        <Button
            android:id="@+id/loginButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_border"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/other_login_google"
            android:textColor="@color/user_text" />

        <Button
            android:id="@+id/loginButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_border"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/other_login_phone"
            android:textColor="@color/user_text" />

        <Button
            android:id="@+id/loginButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_border"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/other_login_guest"
            android:textColor="@color/user_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>