<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".loginActivity.SignUpActivity">

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
        android:drawableTint="@color/primary"
        android:text="@string/back"
        android:textColor="@color/primary" />

    <LinearLayout
        android:id="@+id/createLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/createText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8sp"
            android:text="@string/create_account"
            android:textColor="@color/user_text"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="8dp"
            android:drawableTint="@color/secondary"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/user_text" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_baseline_https_24"
            android:drawablePadding="8dp"
            android:drawableTint="@color/secondary"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/user_text" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/btn_reg" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/successLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/successText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8sp"
            android:text="@string/verify_email"
            android:textAlignment="center"
            android:textColor="@color/user_text"
            android:textSize="24sp"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>